# squad_3_2022_1c

./: .gitignore  Pipfile  Procfile  README.md  create_databases.py  procfile  productos.json  pyproject.toml  requirements.txt
psa_soporte/: constants.py  database.py  employeeService.py  main.py  models.py  schemas.py  ticketService.py
psa_soporte/services/: __init__.py  employeeService.py  exceptions.py  ticketService.py
tests/: test_psa_soporte.py
tests/feature/: cierreTicket.feature  consultaTicket.feature  crearTicket.feature  edicionTicket.feature  ticket.feature
tests/feature/steps/: cierreTicket.py  crearTicket.py  edicionTicket.py  steps.py
